package ru.sfedu.voccards.entity;

public enum ERole {
    ROLE_USER,
    ROLE_TEACHER,
    ROLE_VIP
}
