@startuml
'https://plantuml.com/class-diagram

enum ERole{
    ROLE_USER
    ROLE_TEACHER
    ROLE_VIP
}

class Card{
    -id: Long
    -word: String
    -translation: String
    -transcription: String
}

class CardSet{
    -id: Long
    -creator: User
    -participants: List<User>
    -cardList: List<Card>
    -reviews: List<Review>
}

class Review{
    -id: Long
    -user: User
    -comment: String
    -rate: Integer
    -cardSet: CardSet
}

class User{
    -id: Long
    -username: String
    -password: String
    -roles: List<Role>
    -email: String
    -ownSets: List<CardSet>
    -otherSets: List<CardSet>
}

class Role{
    -id: Long
    -name: ERole
}

Role o-- ERole
CardSet *-- Card
User *-- Role
User o-- CardSet
CardSet o-- Review

hide method

@enduml